[tool.poetry]
name = "sqlalchemy_multi_session_sample"
version = "0.1.0"
description = "sqlalchemy_multi_session_sample"
authors = ["tasogarei <tasogarei34@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^1.3.12"
mysqlclient = "^1.4.6"
python-dotenv = "^0.10.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
